Version 3.0.0   unreleased

    * Bump to 3.0.0 due to interface change.
    * Add new ViewDataUtils with utilities related to view data, especially filter criteria.
    * Add specialized typed columns (String, Integer, Date, etc.) to make client code cleaner.
    * Move all table-related widgets into their own-subpackage, because there's a lot of them now.

Version 2.4.2   27 Oct 2013

   * No functional changes, only organizational/build changes.
   * Test to make sure build works on Linux, and bump up to 0.8.6 of CedarBuild for changes.
   * Reformat build.gradle to tabstop=4, to be consistent with Eclipse editors.
   * Pull definitions for test suites back down into build.gradle, rather than CedarBuild.

Version 2.4.1   23 Oct 2013

    * Add new PropertiesUtils and HierarchicalProperties utility classes.
    * Pull up AbstractStandardDialog, AbstractWidgetUtils and NativeUtils now that it's clear they're common.

Version 2.4.0   17 Oct 2013

    * Add HttpStatusCode.AUTHENTICATION_TIMEOUT for non-standard 419 code.
    * Add AbstractRpcCaller.handleSpecialErrors() to give child classes a hook for special problems.
    * Rework SpringContextService.invalidateSession() so it doesn't create a session before invalidating it.
    * Extend AbstractRpcCaller so it handles GWT's goofy HTTP status zero error (basically "no response").
    * Add new method AbstractRpcCaller.generateNoResponseReceivedError(), which child classes must implement.
    * Handle UNAUTHORIZED (401) status the same as FORBIDDEN (403) when calling RPCs.

Version 2.3.2   16 Oct 2013

    * Add support for Messages interface into GwtConfigUtils.

Version 2.3.1   14 Oct 2013

    * Bump up to a later version of the Mvp4g 1.5.0 snapshot due to GIN 2.0.0 problems downstream.

Version 2.3.0   14 Oct 2013

    * Change build.gradle to get Mvp4g from com.googlecode.cedar-common rather than snapshot repo.
    * Explicitly list GIN 2.0.0 in build.gradle, rather than relying on implicit Mvp4g dependency.
